<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragment_presupuesto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inplay1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:focusedByDefault="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAncho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ancho"
            android:inputType="numberDecimal"
            android:nextFocusDown="@id/txtAlto"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintBottom_toBottomOf="@+id/inplay1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAlto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alto"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inplay2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="@+id/inplay1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inplay1"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtOtroModelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/otro_modelo"
            android:inputType="numberSigned"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/vidrio"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <RadioGroup
        android:id="@+id/gpoVidrio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/rdoAnti"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/anti" />

        <RadioButton
            android:id="@+id/rdoDobleAnti"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/doble_anti" />

        <RadioButton
            android:id="@+id/rdoSinAnti"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/sin_anti" />

        <RadioButton
            android:id="@+id/rdoResina"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/resina" />

        <RadioButton
            android:id="@+id/rdoPolioleo"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/polioleo" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3333" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6666" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/otros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inplay2" />

    <CheckBox
        android:id="@+id/chkPegEng"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:text="@string/pegado_engrapado"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/chkLaminado" />

    <CheckBox
        android:id="@+id/chkLaminado"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:text="@string/laminado"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpoVidrio" />

    <TextView
        android:id="@+id/lblPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cero"
        android:textColor="@color/primaryColor"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/lblMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>